--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                             <a class="nav-link"><a href="./index.html">Originales</a></a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link"><a href="./salvamentos.html">Salvamentos</a></a>
+                            <!-- <a class="nav-link"><a href="./salvamentos.html">Salvamentos</a></a> proximamente implementare esa pag -->
                         </li>
                         <li class="nav-item">
                         </li>
