--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
         </div>
         <div class="modal-footer">
             <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
-            <button type="button" class="btn btn-success"><i class="fa-brands fa-whatsapp"></i></button>
+            <button type="button" class="btn btn-success" id="btnWpp"><i class="fa-brands fa-whatsapp"></i></button>
         </div>
     </div>
 </div>
